[package]
name = "flopsy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
libc = { version = "0.2", optional = true }
tokio = { version = "1.25", features = ["full"] }

[features]
splice = ["dep:libc"]

[profile.release]
strip = "symbols"
lto = true
panic = "abort"