[package]
name = "flopsy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "flopsy"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
libc = { version = "0.2", optional = true }
tokio = { version = "1.25", features = ["full"] }

[features]
default = ["splice"]
splice = ["dep:libc"]

[profile.release]
strip = "symbols"
lto = true
panic = "abort"